# igen-sdlc-training

./: .gitignore  README.md
cli-utility/: .gitattributes  LAB-GUIDE.md  README.md  SPEC.md  pyproject.toml
cli-utility/ifta_calculator/: __init__.py  calculator.py  cli.py  jurisdictions.py  loader.py
cli-utility/sample_data/: trips.csv
cli-utility/tests/: test_calculator.py
exercises/session-1-mindset/: D1-discussion-prompts.md  D2-vague-ask-exercise.md
exercises/session-2-claude-code-as-shell/: D3-bootstrap-exercise.md
exercises/session-3-prep-work/: D4-skill-and-wrapper-exercise.md  D5-front-half-sdlc-exercise.md
exercises/session-4-5-web-app/: .gitattributes  LAB-GUIDE.md  README.md  main.py
exercises/session-4-cli-utility/: .gitignore  LAB-GUIDE.md  README.md  SPEC.md  pyproject.toml
exercises/session-4-cli-utility/ifta_calculator/: calculator.py  cli.py
exercises/session-4-cli-utility/sample_data/: trips.csv
exercises/session-4-legacy-comprehension/: LAB-GUIDE.md  README.md  bounded_cache.py
handouts/: C10-what-good-looks-like-review-rubric.md  C2-claude-md-template.md  C5-approval-mode-decision-matrix.md  C6-model-selection-cheat-sheet.md  C7-ai-ready-spec-template.md  CC-claude-code-commands-card.md
homework/: D8-homework-1-brief.md  D9-homework-2-brief.md  homework-2-brief.md  homework-3-brief.md
sessions/day1-01-mindset-shift/: README.md  discussion-prompts.md
sessions/day1-02-accommodating-the-ai/: C7-ai-ready-spec-template.md  C8-make-correctness-easy-checklist.md
sessions/day2-01-legacy-comprehension/: .gitignore  LAB-GUIDE.md  (+1 more)
(+44 files in other folders)
