[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifta-calculator"
version = "0.1.0"
description = "IFTA fuel-tax apportionment calculator (Hour 7 exercise)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ifta-calc = "ifta_calculator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ifta_calculator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
